--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # ----------------------- #
 
 url: http://rylwin.github.io
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: "rylwin's blog"
+subtitle: coding for results
+author: Ryan Winograd
 simple_search: http://google.com/search
 description:
 
